SERVER-50955 oplog_rollover.js pauses the OplogCapMaintainerThread until truncation is needed

(cherry picked from commit 45cbc24908900b708659188dea11af4d14f3ded1)